--- a/blog.css
+++ b/blog.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 body{
     background-color: bisque;
     text-align: center;
@@ -13,7 +16,7 @@ body{
 
 
 #head1{
-    background-color: aqua;
+    background-color: rgb(255, 128, 43);
     padding: 5px;
     font-size: 40px;
     margin-top: 0px;
@@ -28,7 +31,7 @@ body{
 #navlink{
     text-decoration: none;
     padding: 15px;
-    background-color: rgba(127, 104, 71, 0.315);
-    color: rgb(34, 0, 0);
+    background-color:rgba(127, 104, 71, 0.315);
+    color: rgb(10, 0, 0);
     font-size: large;
 }
