--- a/store.css
+++ b/store.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
     background-color: bisque;
     text-align: center;
@@ -13,7 +17,7 @@ body{
 
 
 #head1{
-    background-color: aqua;
+    background-color: rgb(192, 228, 228);
     padding: 5px;
     font-size: 40px;
     margin-top: 0px;
@@ -29,6 +33,6 @@ body{
     text-decoration: none;
     padding: 15px;
     background-color: rgba(127, 104, 71, 0.315);
-    color: rgb(34, 0, 0);
+    color: rgb(0, 0, 0);
     font-size: large;
 }
